fixup: use Collections.unmodifiableMap
Signed-off-by: Todd Baert <todd.baert@dynatrace.com>